Style taggedtext block

--- a/static/less/pages/course/xblock.less
+++ b/static/less/pages/course/xblock.less
@@ -216,4 +216,23 @@
             }
         }
     }
+
+    .taggedtext {
+        button, input[type=button] {
+            .ionisx-btn(@white, @gg-alt-blue);
+
+            font-size: 0.9em;
+            display: inline;
+
+            span {
+                font: inherit;
+                color: inherit;
+            }
+        }
+
+        .submission_feedback {
+            font: inherit;
+            color: @gg-disabled-grey;
+        }
+    }
 }
