Fix display issue of forum menu

--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -110,6 +110,7 @@
         border: 0 none;
         background: none;
         border-radius: 0;
+        overflow: visible;
 
         > .sidebar {
             border: 1px solid @gg-border-grey;
