--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -218,7 +218,7 @@
                             }
                         }
 
-                        &.more-page {
+                        &.more-pages {
                             a:before {
                                 content: none;
                                 display: none;
