Fix dashboard thumbnails size

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -174,7 +174,9 @@
 
                     img {
                         @media (min-width: @screen-md-min) {
-                            .size(200px, 112px);
+                            .size(100%, auto);
+
+                            max-height: 120px;
                         }
                     }
 
