--- a/static/less/mixins/alert.less
+++ b/static/less/mixins/alert.less
@@ -4,10 +4,20 @@
     border: 0 none;
     background: none;
     padding: 15px 20px;
+    color: inherit;
 
-    h3 {
+    h1, h2, h3, h4, h5 {
         font: inherit;
         text-transform: none;
+    }
+
+    p {
+        font: inherit;
+        color: inherit;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     ul {
@@ -32,7 +42,26 @@
     background-color: @gg-pomegranate;
     color: @gg-grey;
 
-    h3 {
+    h1, h2, h3, h4, h5 {
+        color: @white;
+    }
+
+    ul {
+        color: inherit;
+    }
+
+    a {
+        color: @white;
+        text-decoration: underline;
+    }
+}
+
+
+.ionisx-alert-warning {
+    background-color: @gg-orange;
+    color: @white;
+
+    h1, h2, h3, h4, h5 {
         color: @white;
     }
 
