Fix font on about pages

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -175,6 +175,7 @@ section.course-info {
         .square(auto);
 
         margin: 0;
+        font: inherit;
 
         .inner-wrapper {
             margin: 60px 0 0 0;
