--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -1,9 +1,12 @@
-## mako
-<div class="wrapper wrapper-footer">
-  <footer>
-    <p>
-      <a href="https://ionisx.com/contact">Contactez-nous</a>
-      | © IONISx
-    </p>
-  </footer>
-</div>
+<footer>
+  <div class="footer-container">
+    <div class="row">
+      <i class="icon-envelope"></i><a href="https://ionisx.com/contact">Contactez-nous</a>
+    </div>
+    <div class="row">
+      <p>
+        Tous droits réservés | IONISx | <a href="http://ionis-group.com" target="_blank">IONIS Education Group</a>
+      </p>
+    </div>
+  </div>
+</footer>
