Fix image size in dashboard

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -177,6 +177,7 @@
                             .size(100%, auto);
 
                             max-height: 120px;
+                            min-height: 0;
                         }
                     }
 
