Update header focus link style

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -74,6 +74,11 @@ header.global, header.global.slim {
                 &:hover {
                     color: @white;
                 }
+
+                &:focus {
+                    color: @white;
+                    text-decoration: underline;
+                }
             }
 
             .cta-register {
