--- a/templates/dashboard/_dashboard_course_listing.html
+++ b/templates/dashboard/_dashboard_course_listing.html
@@ -25,10 +25,7 @@
 <li class="course-item">
   <article class="course ${enrollment.mode}">
     <%
-      if waffle.flag_is_active(request, 'merge_course_tabs'):
-          course_target = reverse('courseware', args=[course.id])
-      else:
-          course_target = reverse('info', args=[course.id])
+      course_target = reverse('info', args=[course.id.to_deprecated_string()])
     %>
 
     <div class="cover">
@@ -111,10 +108,10 @@
 
               <ul class="actions message-actions">
                 <li class="action-item">
-                  <a class="action action-upgrade" href="${reverse('course_modes_choose', kwargs={'course_id': course.id})}?upgrade=True">
+                  <a class="action action-upgrade" href="${reverse('course_modes_choose', kwargs={'course_id': course.id.to_deprecated_string()})}?upgrade=True">
                     <img class="deco-graphic" src="${static.url('images/vcert-ribbon-s.png')}" alt="ID Verified Ribbon/Badge">
                     <span class="wrapper-copy">
-                      <span class="copy" id="upgrade-to-verified" data-course-id="${course.id}" data-user="${user.username}">${_("Upgrade to Verified Track")}</span>
+                      <span class="copy" id="upgrade-to-verified" data-course-id="${course.id.to_deprecated_string()}" data-user="${user.username}">${_("Upgrade to Verified Track")}</span>
                     </span>
                   </a>
                 </li>
