--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -66,6 +66,10 @@ header.global, header.global.slim {
         ol.nav-global {
             margin: 0.6em 0 0 0;
 
+            @media (max-width: @screen-xs-min) {
+                display: none;
+            }
+
             > li > a {
                 padding: 0;
                 font-weight: 500;
