Improve responsiveness on the iPhone

--- a/static/less/pages/course/courseware.less
+++ b/static/less/pages/course/courseware.less
@@ -131,6 +131,10 @@
         margin: 0;
         padding: 30px;
 
+        @media (max-width: @screen-xs-max) {
+            padding: 10px;
+        }
+
         @import 'xblock.less';
 
         .sequence-nav {
