--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -10,7 +10,7 @@ body,
         background: none;
         padding-bottom: @layout-bottom-spacing;
 
-        @media (min-width: @screen-md-min) {
+        @media (min-width: @screen-xs-max) {
             min-height: 100vh;
             margin-top: -@layout-header-height - @layout-footer-height;
             padding-top: @layout-header-height + @layout-footer-height;
