--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -22,6 +22,10 @@
             color: @white;
             background-color: fadeout(@black, 20%);
 
+            @media (max-width: @screen-xs-max) {
+                padding: 10px;
+            }
+
             > .left-column {
                 padding: 0;
 
@@ -254,6 +258,10 @@
                 &.blank-slate {
                     padding: 30px;
 
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
+
                     .home-header {
                         border-bottom: 1px solid @gg-border-grey;
                         margin: 0 0 1em 0;
@@ -353,6 +361,10 @@
                     box-shadow: none;
                     border-bottom: 1px solid @gg-border-grey;
 
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
+
                     h1 {
                         font: inherit;
                         font-size: @font-size-h2;
@@ -372,6 +384,14 @@
                             border: 0 none;
                             padding: 0;
                             margin: 0 0 0.5em 0;
+                        }
+
+                        .vote-btn {
+                            margin-top: 0;
+
+                            @media (max-width: @screen-xs-max) {
+                                margin-right: 40px;
+                            }
                         }
 
                         p.posted-details {
@@ -404,13 +424,21 @@
 
                 .response-count {
                     margin: 0;
-                    padding: 30px;
+                    padding: 20px 30px;
                     border-bottom: 1px solid @gg-border-grey;
+
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
                 }
 
                 .add-response {
                     margin: 0;
                     padding: 30px 30px 0;
+
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px 10px 0;
+                    }
 
                     button {
                         .ionisx-btn(@white, @gg-alt-blue);
@@ -422,6 +450,10 @@
                 ol.responses {
                     margin: 0;
                     padding: 30px;
+
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
 
                     > li {
                         .square(auto);
@@ -525,6 +557,34 @@
                                 }
                             }
                         }
+                    }
+                }
+
+                .response-pagination {
+                    padding: 20px 30px;
+                    box-shadow: none;
+                    background: none;
+                    border-top: 1px solid @gg-border-grey;
+                    border-bottom: 1px solid @gg-border-grey;
+
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
+
+                    span {
+                        padding: 0;
+                    }
+                }
+
+                .discussion-reply-new {
+                    padding: 30px;
+
+                    @media (max-width: @screen-xs-max) {
+                        padding: 10px;
+                    }
+
+                    h4 {
+                        margin-top: 0;
                     }
                 }
             }
