Fix university labels on courses and home pages

--- a/static/less/pages/courses.less
+++ b/static/less/pages/courses.less
@@ -76,6 +76,24 @@
                 .status {
                     display: none;
                 }
+
+                .meta-info {
+                    box-shadow: none;
+                    background: none;
+                    border: 0 none;
+                    background-color: fadeout(@black, 20%);
+                    border-radius: @default-border-radius;
+                    right: 5px;
+                    bottom: 5px;
+
+                    p {
+                        font: inherit;
+                        font-size: 0.9em;
+                        color: @white;
+                        margin: 0;
+                        padding: 4px 8px;
+                    }
+                }
             }
         }
     }
