Add bottom border to course index on small devices

--- a/static/less/pages/course/courseware.less
+++ b/static/less/pages/course/courseware.less
@@ -19,7 +19,8 @@
         border-right: 1px solid @gg-border-grey;
 
         @media (max-width: @screen-sm-max) {
-            border: 0 none;
+            border-right: none;
+            border-bottom: 2px solid @gg-border-grey;
         }
 
         #accordion {
