Justify text only on big devices

--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -33,7 +33,9 @@ p {
     margin: 0 0 1em 0;
 
     &.justified {
-        .text-justify();
+        @media (min-width: @screen-md-min) {
+            .text-justify();
+        }
     }
 }
 
