--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -16,7 +16,18 @@
 @gg-disabled-grey: #bdc3c7;
 @gg-border-grey: #ddd;
 
+// Misc
 @hr-border: @gg-border-grey;
+
+
+////////////////////////////////////////////////////////////////////////
+// Logo                                                               //
+////////////////////////////////////////////////////////////////////////
+
+@logo-img-path: '../images/logo-white.png';
+@logo-img-width: 273px;
+@logo-sm-img-path: '../images/logo-x-white.png';
+@logo-sm-img-width: 70px;
 
 
 ////////////////////////////////////////////////////////////////////////
