Change emerald button to alt

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -111,7 +111,7 @@
             }
 
             > a {
-                .ionisx-btn(@white, @gg-emerald);
+                .ionisx-btn(@white, @gg-alt-blue);
 
                 font-size: 0.9em;
             }
@@ -261,7 +261,7 @@
                     }
 
                     .enter-course {
-                        .ionisx-btn(@white, @gg-emerald);
+                        .ionisx-btn(@white, @gg-alt-blue);
                         .size(100%, auto);
 
                         font-size: 0.9em;
