--- a/static/less/pages/login.less
+++ b/static/less/pages/login.less
@@ -66,7 +66,7 @@
 
             .form-actions {
                 button[type=submit] {
-                    .ionisx-btn(@white, @gg-emerald);
+                    .ionisx-btn(@white, @gg-alt-blue);
 
                     @media (min-width: @screen-md-min) {
                         .square(auto);
