--- a/templates/dashboard/_dashboard_course_listing.html
+++ b/templates/dashboard/_dashboard_course_listing.html
@@ -21,7 +21,7 @@
 
 <%namespace name='static' file='../static_content.html'/>
 
-<li class="course-item">
+<li class="course-item ionisxed">
   <article class="course ${enrollment.mode}">
     <%
       course_target = reverse('info', args=[course.id.to_deprecated_string()])
