Add updated fontawesome

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,4 +1,11 @@
 ////////////////////////////////////////////////////////////////////////
+// External configuration                                             //
+////////////////////////////////////////////////////////////////////////
+
+@fa-font-path: '../fonts/font-awesome';
+
+
+////////////////////////////////////////////////////////////////////////
 // Colors                                                             //
 ////////////////////////////////////////////////////////////////////////
 
