--- a/static/less/main.less
+++ b/static/less/main.less
@@ -1,4 +1,5 @@
 @import 'bootstrap/less/bootstrap.less';
+@import 'font-awesome/less/font-awesome.less';
 
 @import 'fonts.less';
 @import 'variables.less';
