Add jobs link to footer

--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -8,7 +8,7 @@ footer {
     .footer-container {
         .ionisx-container();
 
-        i.icon-envelope {
+        i.fa {
             margin-right: 5px;
         }
 
