--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -1,7 +1,8 @@
 <footer>
   <div class="footer-container">
     <div class="row">
-      <i class="icon-envelope"></i><a href="https://ionisx.com/contact">Contactez-nous</a>
+      <i class="fa fa-envelope"></i><a href="https://ionisx.com/contact">Contactez-nous</a> |
+      <i class="fa fa-empire"></i><a href="https://ionisx.com/jobs">Rejoignez-nous</a>
     </div>
     <div class="row">
       <p>
