Fix lists font on prerequisites in course about page

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -237,6 +237,9 @@ section.course-info {
                 }
 
                 &.prerequisites {
+                    ul > li {
+                        font: inherit;
+                    }
                 }
 
                 &.course-staff {
