--- a/static/less/pages/login.less
+++ b/static/less/pages/login.less
@@ -37,6 +37,19 @@
 
                  > li {
                      position: relative;
+                     padding-left: 0;
+
+                     &.checkbox {
+                         input {
+                             .square(auto);
+
+                             margin: 6px 8px 0 0;
+                         }
+                     }
+
+                     .tip {
+                         color: inherit;
+                     }
                  }
             }
 
