--- a/static/less/pages/register.less
+++ b/static/less/pages/register.less
@@ -37,6 +37,20 @@
 
                  > li {
                      position: relative;
+
+                     .checkbox {
+                         padding-left: 0;
+
+                         input {
+                             .square(auto);
+
+                             margin: 6px 8px 0 0;
+                         }
+                     }
+
+                     .tip {
+                         color: inherit;
+                     }
                  }
             }
 
