--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -20,6 +20,43 @@ footer {
             }
         }
 
+        nav {
+            ul {
+                li {
+                    display: inline-block;
+                    margin: 0 5px 0 0;
+
+                    &:after {
+                        content: '|';
+                        padding: 0 0 0 5px;
+                    }
+
+                    &:last-child {
+                        margin: 0;
+
+                        &:after {
+                            display: none;
+                        }
+                    }
+                }
+
+                @media (max-width: @screen-xs-max) {
+                    border-bottom: 1px solid @color-border;
+                    padding-bottom: 5px;
+                    margin-bottom: 5px;
+
+                    li {
+                        display: block;
+                        margin: 0;
+
+                        &:after {
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+
         p:last-child {
             margin-bottom: 0;
         }
