Add Open edX logo

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -31,10 +31,10 @@
 // Logo                                                               //
 ////////////////////////////////////////////////////////////////////////
 
-@logo-img-path: '../images/logo-white.png';
+@logo-img-path: '../images/logo-open-edx.png';
 @logo-img-width: 273px;
-@logo-sm-img-path: '../images/logo-x-white.png';
-@logo-sm-img-width: 70px;
+@logo-sm-img-path: '../../../images/header-logo.png';
+@logo-sm-img-width: 94px;
 
 
 ////////////////////////////////////////////////////////////////////////
