--- a/static/less/mixins/button.less
+++ b/static/less/mixins/button.less
@@ -16,6 +16,10 @@
     outline: none;
     overflow: hidden;
 
+    @media (max-width: @screen-xs-max) {
+        white-space: normal;
+    }
+
     &:focus {
         background-color: @bg-color;
         color: @fg-color;
