--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -33,7 +33,7 @@
 
 @logo-img-path: '../images/logo-open-edx.png';
 @logo-img-width: 273px;
-@logo-sm-img-path: '../../../images/header-logo.png';
+@logo-sm-img-path: '../images/logo-edx.png';
 @logo-sm-img-width: 94px;
 
 
