Add IONISx logo to footer

--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -8,6 +8,8 @@ footer {
     .footer-container {
         .ionisx-container();
 
+        position: relative;
+
         i.fa {
             margin-right: 5px;
         }
@@ -59,6 +61,24 @@ footer {
 
         p:last-child {
             margin-bottom: 0;
+        }
+
+        .by-ionisx {
+            .pull-right();
+
+            a {
+                position: absolute;
+                right: 0;
+                top: -15px;
+
+                @media (max-width: @screen-sm-max) {
+                    display: none;
+                }
+
+                img {
+                    max-width: @layout-footer-height;
+                }
+            }
         }
     }
 }
