--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -24,8 +24,13 @@
         </li>
       </ul>
     </nav>
-    <div class="row">
+    <div>
       <p class="copyright">${_("&copy; 2014 {platform_name}, some rights reserved.").format(platform_name=platform_name())}</p>
+    </div>
+    <div class="by-ionisx">
+      <a href="https://ionisx.com">
+        <img src="${static.url('themes/{theme_name}/images/logo-x-white.png'.format(theme_name=settings.THEME_NAME))}" alt="Theme by IONISx">
+      </a>
     </div>
   </div>
 </footer>
