Update fonts definition
Also 900 weight and italic fonts to Open Sans.

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -1,7 +1,7 @@
 @import 'bootstrap/less/bootstrap.less';
 @import 'font-awesome/less/font-awesome.less';
 
-@import 'fonts.less';
+@import 'fonts/main.less';
 @import 'variables.less';
 @import 'mixins/main.less';
 
