Fix about page sidebar issue

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -182,7 +182,7 @@ section.course-info {
     }
 
     .course-sidebar {
-        .square(auto);
+        .size(100%, auto);
         .make-lg-column(4);
         .make-md-column(4);
 
