Update default variables

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -10,11 +10,11 @@
 ////////////////////////////////////////////////////////////////////////
 
 @white: #fff;
-@black: lighten(#000, 8%);
+@black: lighten(#000, 3%);
 
-@color-primary: #3ea5ce;
-@color-secondary: #0f70b7;
-@color-background: #eef0f1;
+@color-primary: #3c556c;
+@color-secondary: #1e9ed7;
+@color-background: darken(#fff, 3%);
 
 @color-error: #c0392b;
 @color-success: #2ecc71;
