Add static templates examples

--- a/static/less/pages/static.less
+++ b/static/less/pages/static.less
@@ -3,6 +3,13 @@
 
     margin-top: @layout-top-spacing;
 
+    h1 {
+        margin-top: 0;
+        text-align: left;
+        padding-bottom: 30px;
+        border-bottom: 1px solid @color-border;
+    }
+
     .inner-wrapper {
         .square(auto);
     }
