Improve CSS selector

--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -19,7 +19,7 @@ body,
 }
 
 .content-wrapper {
-    .introduction {
+    > .introduction {
         .ionisx-container();
 
         margin-top: @layout-top-spacing;
