Fix password reset style

--- a/static/less/pages/password-reset.less
+++ b/static/less/pages/password-reset.less
@@ -6,10 +6,31 @@
 
     @_aside-size: 300px;
 
+    .introduction {
+        background: none;
+        margin: 0;
+
+        header {
+
+            h1 {
+                font: inherit;
+                font-size: @font-size-h1;
+                color: @color-primary;
+                text-transform: none;
+            }
+        }
+    }
+
+    > div {
+        border: 0 none;
+        background: none;
+    }
+
     .content {
         .size(100%, auto);
 
         margin: 0;
+        padding: 0;
 
         @media (min-width: @screen-md-min) {
             margin-right: -@_aside-size;
