Fix password reset button color

--- a/static/less/pages/password-reset.less
+++ b/static/less/pages/password-reset.less
@@ -81,7 +81,7 @@
 
             .form-actions {
                 button[type=submit] {
-                    .ionisx-btn(@white, @color-success);
+                    .ionisx-btn(@white, @color-secondary);
 
                     @media (min-width: @screen-md-min) {
                         .square(auto);
